--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,41 +4,51 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Home
+      Inland 360
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-    <ion-card class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+<ion-content padding>
+  <ion-header>
+    <ion-img id="whole" src="../../assets/inland-360-logo-small.png" alt="image placeholder"></ion-img>
+    <ion-searchbar></ion-searchbar>
+  </ion-header>
+
+  <main>
+    <div>
+      <ion-img src="../../assets/openMicNight.jpg" alt="main image placeholder" id ="mainImg"></ion-img>
+      <h2>Events Calendar</h2>
+      <p>Pullman’s longest running open mic.  We welcome all talents and skill levels.  Sign ups start at 9 pm</p>
+      <p>View more</p>
+      <br>
+      <p>Have a way to add events to user's device</p>
+      <p>https://www.spingo.com/submit/?partnerId=2257</p>
+
+      <br>
+
+      <p><a href="../event-a/event-a.module#EventAPageModule'">Go to the event page?</a></p>
+    </div>
+    <div>
+      <ion-img src="https://s3.amazonaws.com/FringeBucket/image_placeholder.png" alt="main image placeholder" id ="mainImg"></ion-img>
+    <h2>Share Your Snaps</h2>
+      <p>https://inland360.com/share-your-snaps/</p>
+    </div>
+    <div>
+      <ion-img src="https://s3.amazonaws.com/FringeBucket/image_placeholder.png" alt="main image placeholder" id ="mainImg"></ion-img>
+    <h2>Weekly Publication</h2>
+      <p>Not sure about this one yet...</p>
+  </div>
+    <div>
+      <ion-img src="https://s3.amazonaws.com/FringeBucket/image_placeholder.png" alt="main image placeholder" id ="mainImg"></ion-img>
+      <h2>Adding a community event</h2>
+      <p>Make this function more user friendly</p>
+    </div>
+  </main>
+
+  <ion-footer>
+    <p>2019 Moscow-Pullman Daily News and Lewiston Tribune. Terms of Service #</p>
+  </ion-footer>
+  
 </ion-content>
+
