--- a/src/app/events-home/events-home.page.html
+++ b/src/app/events-home/events-home.page.html
@@ -22,6 +22,12 @@
 
   <main>
     <div class="styleA">
+    </div>
+    <script>
+      
+    </script>
+    <div class="styleA">
+      <!--
       <h2 class="date">Monday 28, 2019</h2>
 
       <div class="event">
@@ -120,6 +126,7 @@
         </section>
         <p class="eventPrice">Price: $0 - $15</p>
       </div>
+    -->
     </div>
 
   </main>
