--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -27,7 +27,11 @@
 
       <br>
 
-      <p><a href="../event-a/event-a.module#EventAPageModule'">Go to the event page?</a></p>
+      <p>
+        <ion-button size="small" href="events-home">
+          More info
+        </ion-button>
+      </p>
     </div>
     <div>
       <ion-img src="https://s3.amazonaws.com/FringeBucket/image_placeholder.png" alt="main image placeholder" id ="mainImg"></ion-img>
